<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">nPuzzle10348190</string>
    <string name="action_restart">Restart</string>
    <string name="action_changeImage">Change <br /> image</string>
    <string name="action_changeDifficultyEasy">Easy</string>
    <string name="action_changeDifficultyMedium">Medium</string>
    <string name="action_changeDifficultyHard">Hard</string>
    <string name="home_title">N-Puzzle</string>
    <string name="home_play">Play</string>
    <string name="home_difficulty">Difficulty</string>
    <string name="home_image">Image</string>
    <string name="title_activity_activity_game">activity_game</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_show_image">ShowImage</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_score">Score</string>
    <string name="time">TIME: </string>
    <string name="moves">MOVES: </string>
    <string name="score">SCORE: </string>

</resources>
