<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="nl.mprog.projects.nPuzzle10348190.Game" >
    <item android:id="@+id/settings_easy"
        android:title="@string/action_changeDifficultyEasy"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/settings_medium"
    android:title="@string/action_changeDifficultyMedium"
    android:orderInCategory="100"
    app:showAsAction="never" />
    <item android:id="@+id/settings_hard"
    android:title="@string/action_changeDifficultyHard"
    android:orderInCategory="100"
    app:showAsAction="never" />
    <item android:id="@+id/settings_restart"
        android:title="@string/action_restart"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/settings_image"
        android:title="@string/action_changeImage"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
