<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Home"
    android:background="#ff343aff"
    android:id="@+id/home">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:textSize="72dp"
        android:textColor="#ffffffff" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/home_play"
        android:id="@+id/button"
        android:textSize="36dp"
        android:clickable="true"
        android:layout_marginBottom="43dp"
        android:layout_above="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:textAlignment="center"
        android:background="#ff4affec" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/home_image"
        android:id="@+id/button2"
        android:textSize="36dp"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="193dp"
        android:textAlignment="center"
        android:background="#ff4affec" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/home_difficulty"
        android:id="@+id/button3"
        android:layout_marginTop="82dp"
        android:textSize="36dp"
        android:clickable="true"
        android:layout_alignTop="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:textAlignment="center"
        android:background="#ff4affec" />

</RelativeLayout>
